- Added Version 2.00 - Updated Keyboard Info - Changed paths to be relative rather than absolute

--- a/htdocs/FAQ.htm
+++ b/htdocs/FAQ.htm
@@ -46,17 +46,17 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 
   <tr> 
 
-    <td height="1" width="160"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
 
-    <td height="1" width="342"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
 
-    <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
 
   </tr>
 
   <tr> 
 
-    <td width="160"><img src="/images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
 
     <td colspan="2" align="right" valign="bottom">
 
@@ -66,7 +66,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 
   <tr bgcolor="#FFCC00" align="right"> 
 
-    <td colspan="3"><img src="/images/yellowspacer.gif" width="100%" height="2"></td>
+    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
 
   </tr>
 
@@ -170,7 +170,7 @@ The image quality resulting from those complex operations is high and allows som
 
 <p><h2>Should I use dTV to deinterlace the output from my set-top player ?</h2><p>
 
-While it's feasable and works quite fine (see the "dTV Windvd challenge" in the <a href="/screenshots.htm">screenshots</a> section), home theater pc's have shown the best results while using dvd decoding software along with a dvd-rom and a modern graphic card.<br>
+While it's feasable and works quite fine (see the "dTV Windvd challenge" in the <a href="screenshots.htm">screenshots</a> section), home theater pc's have shown the best results while using dvd decoding software along with a dvd-rom and a modern graphic card.<br>
 However, it's been used quite often for test purposes (testing of grab quality on a high quality source, testing pulldown techniques on well encoded sources etc..).<p>
 
 <h1>Hardware issues</h1><p>
@@ -196,7 +196,7 @@ That means 250 incoming and 500 outgoing bits per second.  At 8 bits per byte, t
 
 Almost any card (and that means A LOT) based of former Brooktree (now Conexant) chips including bt848/878/879. Why those ? They are, for several years now, the chipsets that are easy to program (there has been A LOT of software based on those) and very cheap. Side effect ; a great number of manufacturers have (and are still) produced cards based on those chipsets.<p>
 
-Take a look at the <a href="/card_support.htm">card list</a>. This will never be complete so feel free to drop us an email reporting your experience with dTV and your card.<p>
+Take a look at the <a href="card_support.htm">card list</a>. This will never be complete so feel free to drop us an email reporting your experience with dTV and your card.<p>
 
 
 <i>This list is originally based on the linux bttv driver on which the program was originally based.</i><p>
@@ -218,7 +218,7 @@ See the <a href="http://www.avsforum.com/ubb/Forum12/HTML/004431.html">associate
 
 When feeding some analog sources to the combination grab card/dTV, some numerous horizontal colores lines appear on the image.<p>
 
-See <a href="/images/Mummy_MacrovisionOn.jpg">this picture</a> where macrovision has been added to the video signal. The same video signal <a href="/images/Mummy_MacrovisionOff.jpg">without the macrovision protection</a> is perfectly stripes-free.<p>
+See <a href="images/Mummy_MacrovisionOn.jpg">this picture</a> where macrovision has been added to the video signal. The same video signal <a href="images/Mummy_MacrovisionOff.jpg">without the macrovision protection</a> is perfectly stripes-free.<p>
 
 
 Other examples of this phenomenon can be seen here ;<br>
@@ -247,7 +247,7 @@ Report also the hardware you're using, especially video card and grab card.<p>
 
 Any help is welcome. Despite including very complex code, there's a lot of features in it that are simple or that could be easily implemented without knowing anything about 3:2 pulldown detection.<p>
 
-If you've got an idea, or feel like to trying to implement something that is already in the <a href="/Todo.htm">Todo list</a>, contact the authors and join the <a href="http://sourceforge.net/mail/?group_id=7420">mailing list</a>. All relevant infos to get you started are on the <a href="/developers.htm">developers page</a>.<p>
+If you've got an idea, or feel like to trying to implement something that is already in the <a href="Todo.htm">Todo list</a>, contact the authors and join the <a href="http://sourceforge.net/mail/?group_id=7420">mailing list</a>. All relevant infos to get you started are on the <a href="developers.htm">developers page</a>.<p>
 
 
 
@@ -265,7 +265,7 @@ If you've got an idea, or feel like to trying to implement something that is alr
 
     <td colspan="3"> 
 
-      <div align="center"><img src="/images/yellowspacer.gif" width="100%" height="2"></div>
+      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
 
     </td>
 
@@ -281,23 +281,23 @@ If you've got an idea, or feel like to trying to implement something that is alr
 
     <td colspan="3"> 
 
-      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="/about.htm" class="bottommenu">about</a> 
+      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="about.htm" class="bottommenu">about</a> 
 
-        | <a href="/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="/screenshots.htm" class="bottommenu">screenshots</a> 
+        | <a href="Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots.htm" class="bottommenu">screenshots</a> 
 
-        | <a href="/News.htm" class="bottommenu">news</a> | <a href="/Thanks.htm" class="bottommenu"></a><a href="/downloads.htm" class="bottommenu">download</a> 
+        | <a href="News.htm" class="bottommenu">news</a> | <a href="Thanks.htm" class="bottommenu"></a><a href="downloads.htm" class="bottommenu">download</a> 
 
-        | <a href="/Reviews.htm" class="bottommenu"></a><a href="/Authors.htm" class="bottommenu">authors</a> 
+        | <a href="Reviews.htm" class="bottommenu"></a><a href="Authors.htm" class="bottommenu">authors</a> 
 
-        | <a href="/Thanks.htm" class="bottommenu">thanks</a> <br>
+        | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
 
-        <a href="/installation.htm" class="bottommenu">setup</a> | <a href="/keyboard.htm" class="bottommenu">keyboard 
+        <a href="installation.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard 
 
         shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
 
-        list</a> | <a href="/FAQ.htm" class="bottommenu">faq</a> | <a href="/developers.htm" class="bottommenu">developers</a> 
+        list</a> | <a href="FAQ.htm" class="bottommenu">faq</a> | <a href="developers.htm" class="bottommenu">developers</a> 
 
-        | <a href="/Links.htm" class="bottommenu">links</a></div>
+        | <a href="Links.htm" class="bottommenu">links</a></div>
 
     </td>
 
