--- a/htdocs/keyboard.htm
+++ b/htdocs/keyboard.htm
@@ -22,42 +22,310 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr> 
-    <td height="1" width="160"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="/images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Keyboard 
       Shortcuts&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="/images/yellowspacer.gif" width="100%" height="2"></td>
+    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>Take Still - L<br>
-        Brightness down - B<br>
-        Brightness up - Shift B<br>
-        colour down - C<br>
-        colour up - Shift C<br>
-        Contrast down - K<br>
-        Contrast up - shift K<br>
-        Overscan down - O<br>
-        Overscan up - shift O<br>
-        Hue down - H<br>
-        Hue up - shift H<br>
-        Mute - M<br>
-        Channel up - F1<br>
-        Channel down - F2<br>
-        Toggle Menu on/off - F4<br>
-        Toggle Full Screen - F6<br>
-        Toggle Status Bar on/off - S<br>
-        Exit - Esc</p>
+
+<p><b>TV Tuner</b></p>
+
+
+
+<table border="0">
+  <tr>
+    <td width="200"><small>Channel Up</small></td>
+    <td valign="bottom"><small>PgUp</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Channel Down</small></td>
+    <td valign="bottom"><small>PgDn</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Volume Up</small></td>
+    <td valign="bottom"><small>+</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Volume Down</small></td>
+    <td valign="bottom"><small>-</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Mute</small></td>
+    <td valign="bottom"><small>M</small></td>
+  </tr>
+</table>
+
+<p><b>Miscellaneous</b></p>
+
+
+
+<table border="0">
+  <tr>
+    <td width="200"><small>Exit</small></td>
+    <td valign="bottom"><small>Esc</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Toggle Menu</small></td>
+    <td valign="bottom"><small>Tab</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Toggle Status Bar</small></td>
+    <td valign="bottom"><small>S</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Toggle Show Cursor</small></td>
+    <td valign="bottom"><small>Ctrl+Enter</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Full Screen</small></td>
+    <td valign="bottom"><small>Alt+Enter</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Pause</small> </td>
+    <td valign="bottom"><small>P</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Take Still Picture</small></td>
+    <td valign="bottom"><small>L</small></td>
+  </tr>
+</table>
+
+<p><b>Video Input Select</b></p>
+
+
+
+<table border="0">
+  <tr>
+    <td width="200"><small>Tuner</small></td>
+    <td valign="bottom"><small>Ctrl+Alt+F1</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Composite</small></td>
+    <td valign="bottom"><small>Ctrl+Alt+F2</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>S-Video</small></td>
+    <td valign="bottom"><small>Ctrl+Alt+F3</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Composite via S-Video</small></td>
+    <td valign="bottom"><small>Ctrl+Alt+F4</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Other 1</small></td>
+    <td valign="bottom"><small>Ctrl+Alt+F5</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Other 2</small></td>
+    <td valign="bottom"><small>Ctrl+Alt+F6</small></td>
+  </tr>
+</table>
+<p><b>Video Format Select</b></p>
+
+
+
+<table border="0">
+  <tr>
+    <td width="200"><small>PAL-BDGHI</small></td>
+    <td valign="bottom"><small>Shift+Alt+F1</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>NTSC</small></td>
+    <td valign="bottom"><small>Shift+Alt+F2</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>SECAM</small></td>
+    <td valign="bottom"><small>Shift+Alt+F3</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>PAL-M</small></td>
+    <td valign="bottom"><small>Shift+Alt+F4</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>PAL-N</small></td>
+    <td valign="bottom"><small>Shift+Alt+F5</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>NTSC Japan</small></td>
+    <td valign="bottom"><small>Shift+Alt+F6</small></td>
+  </tr>
+</table>
+
+<p><b>Picture Adjustments</b></p>
+
+
+
+<table border="0">
+  <tr>
+    <td width="200"><small>Brightness Down</small></td>
+    <td valign="bottom"><small>B</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Brightness Up</small></td>
+    <td valign="bottom"><small>Shift+B</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Contrast Down</small></td>
+    <td valign="bottom"><small>K</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Contrast Up</small></td>
+    <td valign="bottom"><small>Shift+K</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Color Down</small></td>
+    <td valign="bottom"><small>C</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Color Up</small></td>
+    <td valign="bottom"><small>Shift+C</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Hue Down</small></td>
+    <td valign="bottom"><small>H</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Hue Up</small></td>
+    <td valign="bottom"><small>Shift+H</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Overscan Down</small></td>
+    <td valign="bottom"><small>O</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Overscan Up</small></td>
+    <td valign="bottom"><small>Shift+O</small></td>
+  </tr>
+</table>
+<p><b>Aspect Ratio Control</b></p>
+<table border="0">
+  <tr>
+    <td width="200"><small>4:3 Fullscreen</small></td>
+    <td valign="bottom"><small>1</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Letterboxed</small></td>
+    <td valign="bottom"><small>2</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>16:9 Anamorphic</small></td>
+    <td valign="bottom"><small>3</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Toggle Automatic Detect</small></td>
+    <td valign="bottom"><small>A</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Detect from Current Image</small></td>
+    <td valign="bottom"><small>`</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Stretch to Window</small></td>
+    <td valign="bottom"><small>0</small></td>
+  </tr>
+</table>
+<p><b>Advanced Aspect Ratio Control</b></p>
+<table border="0">
+  <tr>
+    <td width="200"><small>1.33</small></td>
+    <td valign="bottom"><small>Ctrl+1</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>1.66 Letterboxed</small></td>
+    <td valign="bottom"><small>Ctrl+2</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>1.78 Letterboxed</small></td>
+    <td valign="bottom"><small>Ctrl+3</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>1.85 Letterboxed</small></td>
+    <td valign="bottom"><small>Ctrl+4</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>2.00 Letterboxed</small></td>
+    <td valign="bottom"><small>Ctrl+5</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>2.35 Letterboxed</small></td>
+    <td valign="bottom"><small>Ctrl+6</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>1.66 Anamorphic</small></td>
+    <td valign="bottom"><small>Ctrl+Shift+2</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>1.78 Anamorphic</small></td>
+    <td valign="bottom"><small>Ctrl+Shift+3</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>1.85 Anamorphic</small></td>
+    <td valign="bottom"><small>Ctrl+Shift+4</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>2.00 Anamorphic</small></td>
+    <td valign="bottom"><small>Ctrl+Shift+5</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>2.35 Anamorphic</small></td>
+    <td valign="bottom"><small>Ctrl+Shift+6</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Custom (from INI file)</small></td>
+    <td valign="bottom"><small>Ctrl+9</small></td>
+  </tr>
+</table>
+<p><b>Configure Aspect Ratio Of Display Screen</b></p>
+<table border="0">
+  <tr>
+    <td width="200"><small>Same as Computer Resolution</small></td>
+    <td valign="bottom"><small>Alt+0</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>1.33 - TVs, monitors</small></td>
+    <td valign="bottom"><small>Alt+1</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>1.66</small></td>
+    <td valign="bottom"><small>Alt+2</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>1.78 - HDTV displays</small></td>
+    <td valign="bottom"><small>Alt+3</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>1.85</small></td>
+    <td valign="bottom"><small>Alt+4</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>2.00</small></td>
+    <td valign="bottom"><small>Alt+5</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>2.35</small></td>
+    <td valign="bottom"><small>Alt+6</small></td>
+  </tr>
+  <tr>
+    <td width="200"><small>Custom (from INI file)</small></td>
+    <td valign="bottom"><small>Alt+9</small></td>
+  </tr>
+</table>
+
+
+
       <!-- #EndEditable --></td>
   </tr>
   <tr> 
@@ -65,7 +333,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr bgcolor="#FFCC00"> 
     <td colspan="3"> 
-      <div align="center"><img src="/images/yellowspacer.gif" width="100%" height="2"></div>
+      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
     </td>
   </tr>
   <tr> 
@@ -73,15 +341,15 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr> 
     <td colspan="3"> 
-      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="/about.htm" class="bottommenu">about</a> 
-        | <a href="/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="/screenshots.htm" class="bottommenu">screenshots</a> 
-        | <a href="/News.htm" class="bottommenu">news</a> | <a href="/Thanks.htm" class="bottommenu"></a><a href="/downloads.htm" class="bottommenu">download</a> 
-        | <a href="/Reviews.htm" class="bottommenu"></a><a href="/Authors.htm" class="bottommenu">authors</a> 
-        | <a href="/Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="/installation.htm" class="bottommenu">setup</a> | <a href="/keyboard.htm" class="bottommenu">keyboard 
+      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="about.htm" class="bottommenu">about</a> 
+        | <a href="Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots.htm" class="bottommenu">screenshots</a> 
+        | <a href="News.htm" class="bottommenu">news</a> | <a href="Thanks.htm" class="bottommenu"></a><a href="downloads.htm" class="bottommenu">download</a> 
+        | <a href="Reviews.htm" class="bottommenu"></a><a href="Authors.htm" class="bottommenu">authors</a> 
+        | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
+        <a href="installation.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard 
         shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
-        list</a> | <a href="/FAQ.htm" class="bottommenu">faq</a> | <a href="/developers.htm" class="bottommenu">developers</a> 
-        | <a href="/Links.htm" class="bottommenu">links</a></div>
+        list</a> | <a href="FAQ.htm" class="bottommenu">faq</a> | <a href="developers.htm" class="bottommenu">developers</a> 
+        | <a href="Links.htm" class="bottommenu">links</a></div>
     </td>
   </tr>
 </table>
