--- a/htdocs/Blue_Submarine_No6_Screenshots.htm
+++ b/htdocs/Blue_Submarine_No6_Screenshots.htm
@@ -1,8 +1,8 @@
 <html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
 <head>
-<!-- #BeginEditable "doctitle" --> 
+<!-- #BeginEditable "doctitle" -->
 <title>dTV -- Blue Submarine #6 Screenshots</title>
-<!-- #EndEditable --> 
+<!-- #EndEditable -->
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
 <!--
@@ -21,27 +21,27 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr> 
-    <td height="1" width="160"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
+  <tr>
+    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
-  <tr> 
-    <td width="160"><img src="/images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+  <tr>
+    <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
     <td colspan="2" align="right" valign="bottom">
-      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" --> 
+      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->
       Blue Submarine No. 6 (DVD) Screenshots&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
-  <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="/images/yellowspacer.gif" width="100%" height="2"></td>
+  <tr bgcolor="#FFCC00" align="right">
+    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
   </tr>
-  <tr> 
+  <tr>
     <td colspan="3">&nbsp;</td>
   </tr>
   <tr>
-    <td colspan="3"><!-- #BeginEditable "Text" --> 
+    <td colspan="3"><!-- #BeginEditable "Text" -->
       <h2>Blue Submarine No. 6</h2>
-      <p>Below is a screenshot provided by Felix M.C. Li from Blue Submarine No. 
+      <p>Below is a screenshot provided by Felix M.C. Li from Blue Submarine No.
         6 (DVD) using version 1.5.<br>
       </p>
       <p><b>Title</b>: Blue Submarine No. 6<br>
@@ -49,38 +49,38 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         <b>Connection</b>: S-Video<br>
         <b>Capture/Tuner Card</b>: Pinnacle PCTV Rave<br>
       </p>
-      <p>Thanks to Felix for showing the wonderful picture produced by dTV for 
+      <p>Thanks to Felix for showing the wonderful picture produced by dTV for
         Japanese anime with DVD!</p>
       <p>A capture from Blue Submarine No. 6. Feeling lucky today?<br>
-        <img src="/images/Blue_Submarine_No6.jpg" width="754" height="480" border="3"> 
+        <img src="images/Blue_Submarine_No6.jpg" width="754" height="480" border="3">
       </p>
       <p>Rising from the ashes...<br>
-        <img src="/images/Blue_Submarine_No6_Second.jpg#2.jpg" width="754" height="480" border="3"> 
+        <img src="images/Blue_Submarine_No6_Second.jpg" width="754" height="480" border="3">
       </p>
       <!-- #EndEditable --></td>
   </tr>
-  <tr> 
+  <tr>
     <td colspan="3">&nbsp;</td>
   </tr>
-  <tr bgcolor="#FFCC00"> 
-    <td colspan="3"> 
-      <div align="center"><img src="/images/yellowspacer.gif" width="100%" height="2"></div>
+  <tr bgcolor="#FFCC00">
+    <td colspan="3">
+      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
     </td>
   </tr>
-  <tr> 
+  <tr>
     <td colspan="3">&nbsp;</td>
   </tr>
-  <tr> 
-    <td colspan="3"> 
-      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="/about.htm" class="bottommenu">about</a> 
-        | <a href="/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="/screenshots.htm" class="bottommenu">screenshots</a> 
-        | <a href="/News.htm" class="bottommenu">news</a> | <a href="/Thanks.htm" class="bottommenu"></a><a href="/downloads.htm" class="bottommenu">download</a> 
-        | <a href="/Reviews.htm" class="bottommenu"></a><a href="/Authors.htm" class="bottommenu">authors</a> 
-        | <a href="/Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="/installation.htm" class="bottommenu">setup</a> | <a href="/keyboard.htm" class="bottommenu">keyboard 
-        shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
-        list</a> | <a href="/FAQ.htm" class="bottommenu">faq</a> | <a href="/developers.htm" class="bottommenu">developers</a> 
-        | <a href="/Links.htm" class="bottommenu">links</a></div>
+  <tr>
+    <td colspan="3">
+      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="about.htm" class="bottommenu">about</a>
+        | <a href="Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots.htm" class="bottommenu">screenshots</a>
+        | <a href="News.htm" class="bottommenu">news</a> | <a href="Thanks.htm" class="bottommenu"></a><a href="downloads.htm" class="bottommenu">download</a>
+        | <a href="Reviews.htm" class="bottommenu"></a><a href="Authors.htm" class="bottommenu">authors</a>
+        | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
+        <a href="installation.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard
+        shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing
+        list</a> | <a href="FAQ.htm" class="bottommenu">faq</a> | <a href="developers.htm" class="bottommenu">developers</a>
+        | <a href="Links.htm" class="bottommenu">links</a></div>
     </td>
   </tr>
 </table>
