--- a/htdocs/Passion_Of_Mind_WinDVD_Showdown.htm
+++ b/htdocs/Passion_Of_Mind_WinDVD_Showdown.htm
@@ -22,17 +22,17 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr> 
-    <td height="1" width="160"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="/images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
     <td colspan="2" align="right" valign="bottom"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" --> 
       Passion of Mind dTV v. WinDVD&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="/images/yellowspacer.gif" width="100%" height="2"></td>
+    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
@@ -53,9 +53,9 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         <b>dTV Picture Control Settings</b>: Brightness 18, Contrast 205, Color 
         216, U/V at default and overscan at 2%</p>
       <p>Put on your classes and get really close to the screen...</p>
-      <p> <a href="/Passion_Of_Mind_A.htm"><img src="/images/pom1-win.jpg" width="720" height="480" border="0"></a></p>
+      <p> <a href="Passion_Of_Mind_A.htm"><img src="images/pom1-win.jpg" width="720" height="480" border="0"></a></p>
       <p>Versus this...</p>
-      <p><a href="/Passion_Of_Mind_B.htm"><img src="/images/pom1.jpg" width="720" height="480" border="0"></a> 
+      <p><a href="Passion_Of_Mind_B.htm"><img src="images/pom1.jpg" width="720" height="480" border="0"></a> 
       </p>
       <!-- #EndEditable --></td>
   </tr>
@@ -64,7 +64,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr bgcolor="#FFCC00"> 
     <td colspan="3"> 
-      <div align="center"><img src="/images/yellowspacer.gif" width="100%" height="2"></div>
+      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
     </td>
   </tr>
   <tr> 
@@ -72,15 +72,15 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr> 
     <td colspan="3"> 
-      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="/about.htm" class="bottommenu">about</a> 
-        | <a href="/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="/screenshots.htm" class="bottommenu">screenshots</a> 
-        | <a href="/News.htm" class="bottommenu">news</a> | <a href="/Thanks.htm" class="bottommenu"></a><a href="/downloads.htm" class="bottommenu">download</a> 
-        | <a href="/Reviews.htm" class="bottommenu"></a><a href="/Authors.htm" class="bottommenu">authors</a> 
-        | <a href="/Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="/installation.htm" class="bottommenu">setup</a> | <a href="/keyboard.htm" class="bottommenu">keyboard 
+      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="about.htm" class="bottommenu">about</a> 
+        | <a href="Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots.htm" class="bottommenu">screenshots</a> 
+        | <a href="News.htm" class="bottommenu">news</a> | <a href="Thanks.htm" class="bottommenu"></a><a href="downloads.htm" class="bottommenu">download</a> 
+        | <a href="Reviews.htm" class="bottommenu"></a><a href="Authors.htm" class="bottommenu">authors</a> 
+        | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
+        <a href="installation.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard 
         shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
-        list</a> | <a href="/FAQ.htm" class="bottommenu">faq</a> | <a href="/developers.htm" class="bottommenu">developers</a> 
-        | <a href="/Links.htm" class="bottommenu">links</a></div>
+        list</a> | <a href="FAQ.htm" class="bottommenu">faq</a> | <a href="developers.htm" class="bottommenu">developers</a> 
+        | <a href="Links.htm" class="bottommenu">links</a></div>
     </td>
   </tr>
 </table>
