--- a/htdocs/Todo.htm
+++ b/htdocs/Todo.htm
@@ -25,16 +25,16 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 <tr>
-<td height="1" width="160"><img src="/images/spacer.gif" width="1"
+<td height="1" width="160"><img src="images/spacer.gif" width="1"
 height="1"></td>
-<td height="1" width="342"><img src="/images/spacer.gif" width="1"
+<td height="1" width="342"><img src="images/spacer.gif" width="1"
 height="1"></td>
-<td height="1" width="501"><img src="/images/spacer.gif" width="1"
+<td height="1" width="501"><img src="images/spacer.gif" width="1"
 height="1"></td>
 </tr>
 
 <tr>
-<td width="160"><img src="/images/dtvlogotvthumb.jpg" width="160"
+<td width="160"><img src="images/dtvlogotvthumb.jpg" width="160"
 height="140" alt="dTV Logo"></td>
 <td colspan="2" align="right" valign="bottom"><font face=
 "Verdana, Arial, Helvetica, sans-serif" size="5"><b>
@@ -59,7 +59,7 @@ height="2"></td>
 user and developer feedback as of 10/02/00:&nbsp;</p>/
 
 <ol>
-<li>Fix all <a href="/Bugs_108.htm">bugs</a>, especially
+<li>Fix all <a href="Bugs_108.htm">bugs</a>, especially
 tearing.</li>
 
 <li>Allow ability to access menu options through right mouse
@@ -205,7 +205,7 @@ feedback at the AVScience Forum and our developer mailing list!</p>
 
 <tr bgcolor="#FFCC00">
 <td colspan="3">
-<div align="center"><img src="/images/yellowspacer.gif" width=
+<div align="center"><img src="images/yellowspacer.gif" width=
 "100%" height="2"></div>
 </td>
 </tr>
@@ -217,21 +217,21 @@ feedback at the AVScience Forum and our developer mailing list!</p>
 <tr>
 <td colspan="3">
 <div align="center"><a href="/" class="bottommenu">home</a> | <a
-href="/about.htm" class="bottommenu">about</a> | <a href=
-"/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href=
-"/screenshots.htm" class="bottommenu">screenshots</a> | <a href=
-"/News.htm" class="bottommenu">news</a> | <a href="/Thanks.htm"
-class="bottommenu"></a><a href="/downloads.htm" class=
-"bottommenu">download</a> | <a href="/Reviews.htm" class=
-"bottommenu"></a><a href="/Authors.htm" class=
-"bottommenu">authors</a> | <a href="/Thanks.htm" class=
+href="about.htm" class="bottommenu">about</a> | <a href=
+"Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href=
+"screenshots.htm" class="bottommenu">screenshots</a> | <a href=
+"News.htm" class="bottommenu">news</a> | <a href="Thanks.htm"
+class="bottommenu"></a><a href="downloads.htm" class=
+"bottommenu">download</a> | <a href="Reviews.htm" class=
+"bottommenu"></a><a href="Authors.htm" class=
+"bottommenu">authors</a> | <a href="Thanks.htm" class=
 "bottommenu">thanks</a><br>
- <a href="/installation.htm" class="bottommenu">setup</a> | <a
-href="/keyboard.htm" class="bottommenu">keyboard shortcuts</a> | <a
+ <a href="installation.htm" class="bottommenu">setup</a> | <a
+href="keyboard.htm" class="bottommenu">keyboard shortcuts</a> | <a
 href="http://sourceforge.net/mail/?group_id=7420" class=
-"bottommenu">mailing list</a> | <a href="/FAQ.htm" class=
-"bottommenu">faq</a> | <a href="/developers.htm" class=
-"bottommenu">developers</a> | <a href="/Links.htm" class=
+"bottommenu">mailing list</a> | <a href="FAQ.htm" class=
+"bottommenu">faq</a> | <a href="developers.htm" class=
+"bottommenu">developers</a> | <a href="Links.htm" class=
 "bottommenu">links</a></div>
 </td>
 </tr>
