--- a/htdocs/dTV_Readme200.htm
+++ b/htdocs/dTV_Readme200.htm
@@ -1,7 +1,9 @@
-<html><!-- #BeginTemplate "/Templates/dtvnormal.dwt" -->
+ 
+<html>
+<!-- #BeginTemplate "/Templates/dtvnormal.dwt" --> 
 <head>
 <!-- #BeginEditable "doctitle" --> 
-<title>Untitled Document</title>
+<title>dTV -- Readme Version 1.9</title>
 <!-- #EndEditable --> 
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <style type="text/css">
@@ -18,7 +20,6 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 -->
 </style>
 </head>
-
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr> 
@@ -28,9 +29,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr> 
     <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
-    <td colspan="2" align="right" valign="bottom">
-      <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->dTV 
-      Readme &nbsp;<!-- #EndEditable --></b></font></td>
+    <td colspan="2" align="right" valign="bottom"> <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->README&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
     <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
@@ -38,12 +37,37 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   <tr> 
     <td colspan="3">&nbsp;</td>
   </tr>
-  <tr>
+  <tr> 
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <h2>dTV - Version 1.5</h2>
-      <H2><a HREF="http://deinterlace.sourceforge.net/">Original site</a></H2>
+      <H1>dTV - version 2.0</H1>
       <H2>by John Adcock [<a href="mailto:john@adcock8.freeserve.co.uk">john@adcock8.freeserve.co.uk</a>]</H2>
-      <P>What's new: Auto Pulldown support!</P>
+      <P>What's new:<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Tearing is gone at all refresh rates!<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Error message no longer pops up if
+      you resize video window too small.<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Video no longer becomes purple when
+      resizing or maximizing.<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Smoother Synchronization<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Triple Buffering&nbsp;<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Better Automatic Aspect Ratio Detection defaults<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Added Option to Disable Startup Splash Screen<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Changed Keyboard Shortcuts<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - New shortcuts added for video
+      source and video format selection<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Some existing shortcuts
+      modified for better intuition<br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;New Video Deinterlace Algorithm - better
+      for slow moving images, especially graphics displays.<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Old Video Deinterlace Algorithm - still
+      available, better for fast motion.<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Automatic switching between three Video
+      Deinterlace algorithms:<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Simple Weave during static images<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - New Video Deinterlace during slow
+      moving images<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Old Video Deinterlace during fast
+      moving images<br>
+      </P>
       <H2>License:</H2>
       <P>This file is subject to the terms of the <A HREF=http://www.gnu.org/copyleft/gpl.html>GNU 
         General Public License</A> as published by the Free Software Foundation. 
@@ -56,12 +80,12 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License 
         for more details</P>
       <H2>Requirements:</H2>
-      <P>I think it will run on Win 95/98 and NT. I have tested it on 98, Windows 
-        2000.</P>
-      <P>You will need a processor faster than about Pentium II 400MHz.</P>
-      <P>You will definitely need a PCI TV card with a BT848 BT849 BT878 BT879 
-        in it.</P>
-      <P>This software will not work with ATI All-in-Wonder or Matrox TV cards.</P>
+      <P>- I think it will run on Win 95/98 and NT. I have tested it on 98, Windows 
+        2000.<br>
+      - You will need a processor faster than about Pentium II 400MHz.<br>
+      - You will definitely need a PCI TV card with a BT848 BT849 BT878 BT879 
+        in it.<br>
+      - This software will not work with ATI All-in-Wonder or Matrox TV cards.</P>
       <h1><font color="#FF0000">Warning</font></h1>
       <P><font color="#FF0000">This program installs a temporary driver while 
         it runs.&nbsp; This means that some of the code runs inside Ring0 along 
@@ -74,24 +98,14 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
       <P><font color="#FF0000">As a precaution sync the disks before running this 
         program.&nbsp; Use the sync utility from <a href="http://www.sysinternals.com/">http://www.sysinternals.com/</a> 
         for whichever operating system you are running.</font></P>
-      <H2>What does it do?</H2>
-      <P>At the moment it allows you to trawl thought the available pull down 
-        modes manually using the space bar.&nbsp; So to use get a picture by playing 
-        around with the settings as above.&nbsp; Then put in a film and press 
-        the spacebar until the weave patterns disappear.</P>
-      <P>Or you can use the automatic detection feature.&nbsp; Settings/Automatic 
-        Pulldown Detect.&nbsp; This should select the best method for what your 
-        watching.</P>
-      <p>It is possible to specify a bTV plugin for the program to use.&nbsp; 
-        The default is bDeinterlace.dll with UseKey1 set to 1.</p>
-      <p><a href="installation.htm">Installation Instruction</a></p>
-      <p><a href="card_support.htm">TV Cards Supported</a></p>
-      <p><a href="keyboard.htm">Keyboard Shortcuts</a></p>
-      <p><a href="News.htm">News</a></p>
-      <p><a href="Todo.htm">Todo List</a></p>
-      <p><a href="Thanks.htm">Thanks</a></p>
-      <p><a href="Authors.htm">Authors</a></p>
-      <p><a href="32Spec.htm">Mark Rejhon's 3:2 Spec</a></p>
+      <p><a href="installation.htm">Installation Instruction<br>
+      </a><a href="card_support.htm">TV Cards Supported<br>
+      </a><a href="keyboard.htm">Keyboard Shortcuts<br>
+      </a><a href="News.htm">News<br>
+      </a><a href="Todo.htm">Todo List<br>
+      </a><a href="Thanks.htm">Thanks<br>
+      </a><a href="Authors.htm">Authors<br>
+      </a><a href="32Spec.htm">Mark Rejhon's 3:2 Spec</a></p>
       <H2>Enjoy!</H2>
       <!-- #EndEditable --></td>
   </tr>
@@ -124,4 +138,5 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 alt="SourceForge.net" align="right"></a></p>
 <p>&nbsp; </p>
 </body>
-<!-- #EndTemplate --></html>
+<!-- #EndTemplate -->
+</html>
