--- a/htdocs/downloads.htm
+++ b/htdocs/downloads.htm
@@ -22,24 +22,53 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
 <body bgcolor="#FFFFFF">
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr> 
-    <td height="1" width="160"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="342"><img src="/images/spacer.gif" width="1" height="1"></td>
-    <td height="1" width="501"><img src="/images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="160"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="342"><img src="images/spacer.gif" width="1" height="1"></td>
+    <td height="1" width="501"><img src="images/spacer.gif" width="1" height="1"></td>
   </tr>
   <tr> 
-    <td width="160"><img src="/images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
+    <td width="160"><img src="images/dtvlogotvthumb.jpg" width="160" height="140" alt="dTV Logo"></td>
     <td colspan="2" align="right" valign="bottom">
       <font face="Verdana, Arial, Helvetica, sans-serif" size="5"><b><!-- #BeginEditable "Page%20Title" -->Download&nbsp;<!-- #EndEditable --></b></font></td>
   </tr>
   <tr bgcolor="#FFCC00" align="right"> 
-    <td colspan="3"><img src="/images/yellowspacer.gif" width="100%" height="2"></td>
+    <td colspan="3"><img src="images/yellowspacer.gif" width="100%" height="2"></td>
   </tr>
   <tr> 
     <td colspan="3">&nbsp;</td>
   </tr>
   <tr>
     <td colspan="3"><!-- #BeginEditable "Text" --> 
-      <p>Version 1.9&#151;<b>Experimental</b>&#151;[<a href="distributions/dTV19exe.zip">Binary 
+      <p>Version 2.0.0&#151;<b>Experimental</b>&#151;[<a href="distributions/dTV200exe.zip">Binary 
+        Zipped</a>] [<a href="distributions/dTV200src.zip">Source Zipped</a>] [<a href="dTV_Readme200.htm">README</a>]<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Tearing is gone at all refresh rates!<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Error message no longer pops up if
+      you resize video window too small.<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Bug fixed - Video no longer becomes purple when
+      resizing or maximizing.<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Better Automatic Aspect Ratio Detection defaults<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Smoother Synchronization<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Triple Buffering&nbsp;<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Added Option to Disable Startup Splash Screen<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Changed Keyboard Shortcuts; <a href="keyboard.htm">See
+      List</a><br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - New shortcuts added for video
+      source and video format selection<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Some existing shortcuts
+      modified for better intuition<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;New Video Deinterlace Algorithm - better for
+      slow moving images, especially graphics displays.<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Old Video Deinterlace Algorithm - still
+      available, better for fast motion.<br>
+      &nbsp;&nbsp;&nbsp;&nbsp; Automatic switching between three Video
+      Deinterlace algorithms:<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Simple Weave during static images<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - New Video Deinterlace during slow
+      moving images<br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; - Old Video Deinterlace during fast
+      moving images<br>
+      <br>
+      Version 1.9&#151;<b>Experimential</b>&#151;[<a href="distributions/dTV19exe.zip">Binary 
         Zipped</a>] [<a href="distributions/dTV19src.zip">Source Zipped</a>] [<a href="dTV_Readme109.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Automatic aspect ratio detection!<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Slightly less dropped frames on slower systems<br>
@@ -51,9 +80,9 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         for NTSC (majority of users)<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Advanced Video Flags configuration dialog 
       </p>
-      <p>Version 1.8&#151;<b>Stable</b>&#151;[<a href="/distributions/dTV18exe.zip">Binary 
-        Zipped</a>] [<a href="/distributions/dTV18src.zip">Source Zipped</a>] 
-        [<a href="/dTV_Readme108.htm">README</a>]<br>
+      <p>Version 1.8&#151;<b>Stable</b>&#151;[<a href="distributions/dTV18exe.zip">Binary 
+        Zipped</a>] [<a href="distributions/dTV18src.zip">Source Zipped</a>] 
+        [<a href="dTV_Readme108.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Aspect ratio control simplified and made 
         more intuitive<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Easier hotkeys for common aspect ratios 
@@ -71,7 +100,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
       </p>
       <p>Version 1.7 &#151;<b>Stable</b>&#151;[<a href="/distributions/dTV17exe.zip">Binary 
         Zipped</a>] [<a href="/distributions/dTV17src.zip">Source Zipped</a>] 
-        [<a href="/dTV_Readme106.htm">README</a>]<br>
+        [<a href="dTV_Readme106.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Integrated Michael's aspect ratio control 
         code<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Many bits and pieces of source code cleanup 
@@ -81,10 +110,10 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Documentation (.HTM files) moved into separate 
         subdirectory<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: No TV tuner card related bugfixes 
-        over 1.6; see <a href="/Bugs_107.htm">Known Bugs</a> for current list<br>
+        over 1.6; see <a href="Bugs_107.htm">Known Bugs</a> for current list<br>
       </p>
       <p>Version 1.6 Beta 4&#151;<b>Stable</b>&#151;[<a href="/dTV16b4.zip">Binary 
-        Zipped</a>] [<a href="/dTV16src.zip">Source Zipped</a>] [<a href="/dTV_Readme106.htm">README</a>]<br>
+        Zipped</a>] [<a href="/dTV16src.zip">Source Zipped</a>] [<a href="dTV_Readme106.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Auto detect enabled by default<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Video format (e.g., NTSC) automatically 
         selected upon selection of<br>
@@ -93,36 +122,36 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;More reliable config defaults for 3/2 pulldown 
         detection<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Changes to synchronization code<br>
-        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: See <a href="/Bugs_106b4.htm">Known 
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: See <a href="Bugs_106b4.htm">Known 
         Bugs</a> for additional details</p>
       <p>Version 1.5&#151;<b>Stable</b>&#151;[<a href="http://deinterlace.sourceforge.net/dTV15exe.zip">Binary 
         Zipped</a>] [<a href="http://deinterlace.sourceforge.net/dTV15src.zip">Source 
-        Zipped</a>] [<a href="/dTV_Readme105.htm">README</a>]<br>
+        Zipped</a>] [<a href="dTV_Readme105.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Auto 3:2 pulldown detect for NTSC<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Auto 2:2 pulldown detect for PAL (not very 
         reliable needs some tweaking)<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Adaptive video deinterlacing<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Note: Teletext and CC broken</p>
       <p>Version 1.4&#151;<b>Stable</b>&#151;[<a href="/dTV14exe.zip">Binary Zipped</a>] 
-        [<a href="/dTV14src.zip">Source Zipped</a>] [<a href="/dTV_Readme104.htm">README</a>]<br>
+        [<a href="/dTV14src.zip">Source Zipped</a>] [<a href="dTV_Readme104.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fix for overlays in low colour depths<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Still capture in ppm format<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Overscan support</p>
       <p>Version 1.3 &#151;<b>Superceded</b>&#151; [<a href="/dTv13aexe.zip">Binary 
-        Zipped</a>] [<a href="/dTV13asrc.zip">Source Zipped</a>] [<a href="/dTV_Readme103.htm">README</a>]<br>
+        Zipped</a>] [<a href="/dTV13asrc.zip">Source Zipped</a>] [<a href="dTV_Readme103.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Code clean up<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Better card support<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Sound bugs fixed<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Changed overlay colour<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Open Source video deinterlace version 1</p>
       <p>Version 1.2 &#151;<b>Stable</b>&#151; [<a href="/dTVex12.zip">Binary 
-        Zipped</a>] [<a href="/dTV_Readme102.htm">README</a>]<br>
+        Zipped</a>] [<a href="dTV_Readme102.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Fix for flipping with bTV plug-ins</p>
-      <p>Version 1.1 [<a href="/dTVex11.zip">Binary Zipped</a>] [<a href="/dTV_Readme101.htm">README</a>]<br>
+      <p>Version 1.1 [<a href="/dTVex11.zip">Binary Zipped</a>] [<a href="dTV_Readme101.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Support for bTV plugins added<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Full screen support</p>
       <p>Version 1.0 [<a href="/dTVexe.zip">Binary Zipped</a>] [<a href="/dTVsrc.zip">Source 
-        Zipped</a>] [<a href="/dTV_Readme100.htm">README</a>]<br>
+        Zipped</a>] [<a href="dTV_Readme100.htm">README</a>]<br>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Original version--support for manual inverse 
         telecine <br>
       </p>
@@ -133,7 +162,7 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr bgcolor="#FFCC00"> 
     <td colspan="3"> 
-      <div align="center"><img src="/images/yellowspacer.gif" width="100%" height="2"></div>
+      <div align="center"><img src="images/yellowspacer.gif" width="100%" height="2"></div>
     </td>
   </tr>
   <tr> 
@@ -141,15 +170,15 @@ pre {  font-family: "Courier New", Courier, mono; font-size: 9pt}
   </tr>
   <tr> 
     <td colspan="3"> 
-      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="/about.htm" class="bottommenu">about</a> 
-        | <a href="/Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="/screenshots.htm" class="bottommenu">screenshots</a> 
-        | <a href="/News.htm" class="bottommenu">news</a> | <a href="/Thanks.htm" class="bottommenu"></a><a href="/downloads.htm" class="bottommenu">download</a> 
-        | <a href="/Reviews.htm" class="bottommenu"></a><a href="/Authors.htm" class="bottommenu">authors</a> 
-        | <a href="/Thanks.htm" class="bottommenu">thanks</a> <br>
-        <a href="/installation.htm" class="bottommenu">setup</a> | <a href="/keyboard.htm" class="bottommenu">keyboard 
+      <div align="center"><a href="/" class="bottommenu">home</a> | <a href="about.htm" class="bottommenu">about</a> 
+        | <a href="Reviews.htm" class="bottommenu">reviews</a> |&nbsp;<a href="screenshots.htm" class="bottommenu">screenshots</a> 
+        | <a href="News.htm" class="bottommenu">news</a> | <a href="Thanks.htm" class="bottommenu"></a><a href="downloads.htm" class="bottommenu">download</a> 
+        | <a href="Reviews.htm" class="bottommenu"></a><a href="Authors.htm" class="bottommenu">authors</a> 
+        | <a href="Thanks.htm" class="bottommenu">thanks</a> <br>
+        <a href="installation.htm" class="bottommenu">setup</a> | <a href="keyboard.htm" class="bottommenu">keyboard 
         shortcuts </a> | <a href="http://sourceforge.net/mail/?group_id=7420" class="bottommenu">mailing 
-        list</a> | <a href="/FAQ.htm" class="bottommenu">faq</a> | <a href="/developers.htm" class="bottommenu">developers</a> 
-        | <a href="/Links.htm" class="bottommenu">links</a></div>
+        list</a> | <a href="FAQ.htm" class="bottommenu">faq</a> | <a href="developers.htm" class="bottommenu">developers</a> 
+        | <a href="Links.htm" class="bottommenu">links</a></div>
     </td>
   </tr>
 </table>
